--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-session": "^1.14.2",
     "mongoose": "^4.4.15",
     "mongoose-auto-increment": "^5.0.1",
+    "mongoose-search-plugin": "^0.1.2",
     "multer": "^1.2.0",
     "passport-facebook": "^2.1.1",
     "q": "^1.4.1"
